fixed overlapping issue

--- a/client/src/static/styles/global.scss
+++ b/client/src/static/styles/global.scss
@@ -51,7 +51,7 @@ a {
     align-items: center;
     text-align: center;
     margin: auto;
-    min-height: 100vh;
+    margin-top: 15vh;
     max-width: 720px;
 }
 
